# neon

./: .dockerignore  .env.example  .gitignore  .task-session.json  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pytest.ini  resume-bullets.md  turbo.json
.beads/: batch-epic-agents.md  batch-epic-command-center.md  batch-epic-compare-experiments.md  batch-epic-data-layer.md  batch-epic-eval-suites.md  batch-epic-global.md  batch-epic-prompts.md  batch-epic-settings.md  batch-epic-traces.md  batch-epic-training.md  batch-test.md  batch-test2.md  batch-test3.md  issues.jsonl  last-touched  ui-rework-sprint-plan.md
.claude/: settings.json
.claude/commands/: pr-ready.md  wt.md
.claude/hooks/: post-commit-review.sh  review-gate.sh
.claude/skills/: alignment-check.md  api-check.md  dev-check.md  dispatch.md  nav-check.md  pr-ready.md  review-gate.md  roadmap-sync.md  task-breakdown.md  task-complete.md  task-start.md  ui-explore.md  visual-check.md  (+1 more)
.project/: LIFECYCLE.md  MIGRATION-PLAN.md  roadmap.json  schema.json  state.json  task-index.json
.serena/: project.yml
.strategy/: STRATEGIC-BRIEF.md  VALIDATION-SUMMARY.md  codebase-analysis.md  future-architecture.md  gap-analysis.md  market-research.md  product-trajectory.md  validation-agents-settings.md  validation-evals-compare.md  validation-global-commandcenter.md  validation-traces-prompts.md  validation-training-datalayer.md
agent-eval/: .gitignore  README.md
agent-eval/cli/: pyproject.toml
agent-eval/cli/src/: loader.py
agent-eval/cli/src/commands/: compare.py
api/: README.md  pyproject.toml
api/src/: __init__.py  config.py  main.py
api/src/agent/: __init__.py  adapters.py  loader.py
api/src/auth/: __init__.py
api/src/middleware/: __init__.py
api/src/models/: __init__.py  auth.py  compare.py  db.py  eval.py
api/src/routers/: auth.py  cases.py  runs.py
api/src/scorers/: __init__.py  grounding.py  llm_judge.py  reasoning.py  tool_selection.py
api/src/services/: __init__.py  eval_runner.py  run_service.py  suite_service.py
api/tests/: __init__.py  conftest.py  test_health.py
api/tests/agent/: __init__.py  test_loader.py
api/tests/db/: test_models.py  test_session.py
api/tests/middleware/: test_rate_limit.py
api/tests/routers/: test_suites.py
api/tests/services/: test_eval_runner.py  test_run_service.py  test_stats_service.py
config/: otel-collector.yaml
demo/: AGENT_TRACE_DEMO.md  demo.sh  docker-compose.demo.yml
deployment/: README.md
docs/: PRODUCT-FOCUS.md  ROADMAP.md  api-reference.md  architecture.md  cicd.md  configuration.md  dashboard.md  error-reference.md  faq.md  getting-started.md  openinference-genai-audit.md  scorers.md  sdk.md  self-hosting.md  test-suites.md
docs-site/: astro.config.mjs
examples/: README.md  __init__.py
examples/langgraph-agent/: Dockerfile  README.md  agent.py  neon_tracer.py  pyproject.toml  run_agent.py  run_demo.py
frontend/: .dockerignore  .env.local.example  BUNDLE_OPTIMIZATION.md  Dockerfile  auth.ts  biome.json  drizzle.config.ts  instrumentation.ts  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
scripts/: api-integration-test.ts  benchmark-indexes.ts  claude-code-parse-transcript.py  claude-code-tracer.sh  clickhouse-init.sql  init-db.sql  integration-test.ts  postgres-init.sql  review-gate.sh
temporal-workers/: Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
tests/: __init__.py
(+772 files in other folders)
